...
                        }
                    }
                } else {
                    // Display error if passcode length is invalid
                }
            }) {
                Text("Unlock")
                    .fontWeight(.bold)
//                    .foregroundColor(.green)
            }
            // Disable button if passcode length is not 8 digits
            .disabled(!(passcode.count == 8)))
            
...
